# gadaj

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  LICENSE  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
scripts/: copy_ggml_to_bundle.sh
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  models.rs  pipeline.rs  settings.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/input/: hotkey.rs  mod.rs  paste.rs
src-tauri/src/stt/: mod.rs  parakeet.rs  resample.rs
src-tauri/tests/: smoke.rs
src/components/: History.tsx  Main.tsx  Onboarding.tsx  Settings.tsx
src/i18n/: en.json  index.ts  pl.json
