[package]
name = "gadaj"
version = "0.1.0"
description = "Polska, open-source apka do dyktowania offline z Parakeet"
authors = ["Jaro"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "gadaj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cmake = "0.1"

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-single-instance = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
enigo = "0.3"
arboard = "3.4"
rdev = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
byteorder = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "unwind"
